--- a/assets/css/sass/base/layout/widgets.scss
+++ b/assets/css/sass/base/layout/widgets.scss
@@ -71,8 +71,14 @@
 
         &:hover{
         	border-color: $tr;
-        	color: #fff;
         }
+    }
+    #secondary .widget &{
+    	a{
+    		&:hover{
+    			color: #fff;
+    		}
+    	}
     }
 }
 
