--- a/assets/css/sass/base/layout/breadcrumb.scss
+++ b/assets/css/sass/base/layout/breadcrumb.scss
@@ -1,3 +1,10 @@
+.breadcrumb{
+	margin-bottom: 20px;
+	.single-product &{
+		margin-bottom: 0;
+	}
+}
+
 .wc-breadcrumb{
 	.single-product &{
 		padding-bottom: 35px;
@@ -21,20 +28,16 @@
 }
 
 .page-header{
+	text-align: center;
+	text-align: center;
+	+.site-content{
+		margin-top: 0;
+	}
+
 	.entry-title{
+		margin: 0;
+		padding: 30px;
 		font-size: 2em;
 		font-weight: normal;
-	}
-}
-
-.site-main{
-	.page-header{
-		margin-bottom: 50px;
-		padding: 30px;
-		text-align: center;
-
-		.entry-title{
-			margin: 0;
-		}
 	}
 }
