--- a/assets/css/sass/base/layout/footer.scss
+++ b/assets/css/sass/base/layout/footer.scss
@@ -126,7 +126,7 @@
 	visibility: hidden;
 	opacity: 0;
 	pointer-events: none;
-	@include translatex( 100% );
+	@include translatey( 100% );
 	@extend .duration;
 	@extend .flex;
 }
@@ -139,6 +139,7 @@
 	height: 40px;
 	color: #fff;
 	font-size: 1.2em;
+	z-index: 10;
 }
 
 /* responsive */
