--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -22,6 +22,13 @@
 		.woocommerce{
 			@extend .container;
 		}
+		@media ( max-width: $screen-md - 1 ) {
+			padding-bottom: 35px;
+			.woocommerce-message,
+			.woocommerce-info{
+				margin-bottom: 0;
+			}
+		}
 	}
 	.summary {
 		.yith-wcwl-add-to-wishlist{
