--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -121,7 +121,7 @@
 	}
 
 	[name="apply_coupon"]{
-		border-width: 0 0 1px 0;
+		border-bottom: 1px solid #e8e8e8;
 		font-size: 12px;
 		font-weight: 600;
 		text-transform: uppercase;
