--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -360,7 +360,7 @@
 	&.button {
 		min-width: 200px;
 		height: 50px;
-		border-radius: 50px $i;
+		border-radius: 50px;
 		font-weight: 600;
 		text-transform: uppercase;
 		vertical-align: top;
