update style for select2 on WC widget; add WC breadcrumb only woocommerce page

--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -364,6 +364,8 @@
 		font-weight: 600;
 		text-transform: uppercase;
 		vertical-align: top;
+		padding-top: 0;
+		padding-bottom: 0;
 
 		@media ( max-width: 600px ) {
 			min-width: auto;
