--- a/assets/css/sass/woocommerce/shop-page.scss
+++ b/assets/css/sass/woocommerce/shop-page.scss
@@ -84,6 +84,48 @@
 	}
 }
 
+.ps-layout-1{
+	.product-loop-meta{
+		.button{
+			padding: 0;
+			background-color: $tr;
+		}
+	}
+}
+
+#secondary{
+	.select2-selection--multiple{
+		min-height: auto;
+		.select2-selection__rendered{
+			padding: 0 5px 5px;
+			display: block;
+		}
+		.select2-search{
+			margin: 0;
+			line-height: 1;
+			margin-top: 5px;
+		}
+		.select2-search__field{
+			line-height: 36px;
+			padding: 0;
+		}
+	}
+	.select2-selection--single{
+		height: 46px;
+		.select2-selection__rendered{
+			line-height: 46px;
+			height: 45px;
+		}
+		.select2-selection__placeholder{
+			line-height: 46px;
+		}
+		.select2-selection__arrow{
+			top: 50%;
+			@include translatey( -50% );
+		}
+	}
+}
+
 /* responsive */
 @media ( min-width: $screen-md ) {
 	.products{
