add option to díable scroll-to-top; update rating-star; remove all .scss  file  to zip archive

--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -170,8 +170,8 @@
 	abbr{
 		text-decoration: none;
 	}
-	.required{
-		color: #f01145
+	@at-root .required{
+		color: firebrick;
 	}
 	.input-text{
 		width: 100%;
