--- a/assets/css/sass/base/layout/header.scss
+++ b/assets/css/sass/base/layout/header.scss
@@ -29,7 +29,6 @@
     .site-branding{
         .beta.site-title{
             margin: 0;
-            text-transform: lowercase;
             font-size: 24px;
         }
     }
@@ -45,10 +44,6 @@
     	}
 
     	+.site-search{
-    		margin-left: 10px;
-    	}
-
-    	+.site-tools{
     		margin-left: 10px;
     	}
     }
@@ -199,6 +194,16 @@
 
 	.my-account{
 		position: relative;
+		.my-account-icon{
+			padding: 10px 0;
+		}
+		&.tools-icon{
+			ul a{
+				font-size: 14px;
+				padding: 10px 20px;
+				display: block;
+			}
+		}
 
 		&:hover{
 			ul{
@@ -217,14 +222,14 @@
 			opacity: 0;
 			position: absolute;
 			z-index: 2;
-			left: -10px;
+			left: -20px;
 			top: 100%;
 			background-color: #fff;
 			border-radius: 4px;
 			pointer-events: none;
 			@include duration( 0.2s );
 			@include translatey( 10px );
-			@include shadow( 0px 1px 4px 0 rgba(0, 0, 0, 0.2) )
+			@include shadow( 0px 1px 4px 0 rgba(0, 0, 0, 0.2) );
 		}
 
 		li{
@@ -234,16 +239,15 @@
 				border-top: 1px solid #eee;
 			}
 		}
-
-		a{
-			padding: 10px 20px;
-			display: block;
-		}
 	}
 
 	.tools-icon{
 		font-size: 24px;
 		display: flex;
+		margin-left: 15px;
+		.tools-icon{
+			margin-left: 0;
+		}
 	}
 
 	.header-search-icon{
@@ -314,10 +318,6 @@
 		.header-search-icon,
 		.my-account{
 			display: none;
-		}
-
-		.shopping-bag-button{
-			margin-left: 0;
 		}
 	}
 }
