--- a/assets/css/admin/welcome-screen/welcome.scss
+++ b/assets/css/admin/welcome-screen/welcome.scss
@@ -1,5 +1,9 @@
 $green: #45b964;
 
+* {
+	outline: none !important;
+}
+
 .appearance_page_woostify-welcome {
 	#wpcontent {
 		padding: 0;
@@ -308,4 +312,16 @@ $green: #45b964;
 			margin-bottom: 10px;
 		}
 	}
+}
+
+/* STYLE FOR `Image` COLUMN `post` ADMIN SCREEN
+***************************************************/
+#thumbnail_image {
+	width: 60px;
+}
+#the-list td.thumbnail_image a:focus {
+	box-shadow: none;
+}
+#the-list td.thumbnail_image img {
+	max-width: 100%;
 }
