--- a/assets/css/sass/base/layout/footer.scss
+++ b/assets/css/sass/base/layout/footer.scss
@@ -1,5 +1,4 @@
 .site-footer {
-	margin-top: 100px;
 	clear: both;
 
 	.elementor-page &{
@@ -9,7 +8,7 @@
 
 /* FOOTER WIDGET COLUMNS */
 
-.footer-widget {
+.site-footer-widget {
 	float: left;
 	width: 100%;
 	padding: 55px 0 70px 0;
