--- a/assets/css/sass/base/layout/widgets.scss
+++ b/assets/css/sass/base/layout/widgets.scss
@@ -1,8 +1,10 @@
 .widget{
 
-	&:first-of-type{
-		.widget-title{
-			margin-top: 0;
+	&:not(.footer-widget) {
+		&:first-of-type{
+			.widget-title{
+				margin-top: 0;
+			}
 		}
 	}
 
@@ -407,7 +409,7 @@
 		margin-bottom: 15px;
 	}
 
-	.woostify-footer-social-icon{
+	@at-root .woostify-footer-social-icon{
 		padding-left: 0;
 		margin: 20px 0 0;
 
@@ -418,20 +420,22 @@
 			+li{
 				margin-left: 7px;
 			}
-		}
 
-		a{
-			width: 30px;
-			height: 30px;
-			border-radius: 50%;
-			color: #fff;
-			background-color: #232323;
-			@extend .inline-flex;
+			a{
+				width: 30px;
+				height: 30px;
+				border-radius: 50%;
+				border-style: solid;
+				border-width: 1px;
+				@extend .inline-flex;
 
-			&:hover{
-				opacity: 0.7;
+				&:hover{
+					opacity: 0.7;
+					color: #fff;
+				}
 			}
 		}
+
 	}
 }
 
