--- a/assets/css/sass/base/layout/blog/layout.scss
+++ b/assets/css/sass/base/layout/blog/layout.scss
@@ -91,7 +91,7 @@ $sidebar_width: percentage( 270 / 1170 );
 			}
 		}
 
-		#post-navigation{
+		.post-navigation{
 			flex: 0 0 100%;
 			margin-top: 0;
 		}
