--- a/assets/css/sass/grid/grid_elementor.scss
+++ b/assets/css/sass/grid/grid_elementor.scss
@@ -2,6 +2,11 @@
     margin-left: -15px;
     margin-right: -15px;
     min-height: 1px;
+    &:after{
+    	content: '';
+    	display: block;
+    	clear: both;
+    }
 }
 .ht-grid-item {
     padding-left: 15px;
