--- a/assets/css/sass/modules/tiny-slider.scss
+++ b/assets/css/sass/modules/tiny-slider.scss
@@ -126,16 +126,9 @@
 }
 
 /* arrows */
-
-.tns-controls {
-	position: absolute;
-	top: 50%;
-	width: 100%;
-	margin-top: -25px;
-}
-
 .tns-controls [data-controls] {
 	position: absolute;
+	top: 50%;
 	background: #fff;
 	width: 50px;
 	height: 50px;
@@ -144,6 +137,7 @@
 	border: 0;
 	font-size: 0;
 	z-index: 2;
+	transform: translateY( -50% );
 	@extend .flex;
 }
 
