update header_action; hidden autoplay action on tiny-slider

--- a/assets/css/sass/modules/tiny-slider.scss
+++ b/assets/css/sass/modules/tiny-slider.scss
@@ -102,9 +102,9 @@
 	overflow-y: hidden
 }
 
-.tns-visually-hidden {
-	position: absolute;
-	left: -10000em
+.tns-visually-hidden,
+.tns-outer button[data-action] {
+	display: none;
 }
 
 .tns-transparent {
