--- a/assets/css/admin/welcome-screen/welcome.scss
+++ b/assets/css/admin/welcome-screen/welcome.scss
@@ -314,8 +314,7 @@ $green: #45b964;
 	}
 }
 
-/* STYLE FOR `Image` COLUMN `post` ADMIN SCREEN
-***************************************************/
+/* STYLE FOR `Image` COLUMN `post` ADMIN SCREEN */
 #thumbnail_image {
 	width: 60px;
 }
@@ -324,4 +323,36 @@ $green: #45b964;
 }
 #the-list td.thumbnail_image img {
 	max-width: 100%;
+}
+
+/* Admin notice */
+.woostify-admin-notice{
+	padding: 10px !important;
+	border-left: 0;
+	clear: both;
+	.woostify-notice-content{
+		display: flex;
+		align-items: center;
+		background: rgba(72, 73, 21, 0.15);
+		padding: 20px;
+	}
+	.woostify-notice-img{
+		margin-left: 10px;
+		margin-right: 30px;
+		width: 50px;
+		transform: rotate(-30deg);
+	}
+	.woostify-notice-heading{
+		font-size: 1.4em;
+	}
+	.woostify-notice-text{
+		a{
+			font-weight: 700;
+			color: #001099;
+		}
+	}
+	.notice-dismiss{
+		top: 5px;
+		right: 5px;
+	}
 }
