WOOSTIFY-66 #comment update admin notice

--- a/assets/css/admin/welcome-screen/welcome.css
+++ b/assets/css/admin/welcome-screen/welcome.css
@@ -357,4 +357,6 @@
 .woostify-admin-notice .notice-dismiss {
   top: 5px;
   right: 5px;
+  outline: none !important;
+  box-shadow: none !important;
 }
