--- a/assets/css/admin/welcome-screen/welcome.scss
+++ b/assets/css/admin/welcome-screen/welcome.scss
@@ -354,5 +354,7 @@ $green: #45b964;
 	.notice-dismiss{
 		top: 5px;
 		right: 5px;
+		outline: none !important;
+		box-shadow: none !important
 	}
 }
