--- a/assets/css/admin/metabox.scss
+++ b/assets/css/admin/metabox.scss
@@ -1,13 +1,30 @@
+.gutenberg-version{
+	#woostify_settings_meta_box{
+		&.closed {
+			.hndle {
+				&:hover{
+					background-color: #f8f9f9;
+				}
+			}
+		}
+		.handlediv{
+			position: relative;
+			z-index: 99;
+		}
+		.hndle{
+			cursor: pointer;
+			color: #191e23 !important;
+			border-bottom: 0 !important;
+			transition: 0.1s background ease-in-out;
+		}
+	}
+}
+
 #woostify_settings_meta_box{
 	.inside {
 		margin: 0;
 		padding: 0;
 	}
-}
-
-.woostify-metabox-setting{
-	clear: both;
-	margin-top: 15px;
 }
 
 /* tabs */
@@ -42,12 +59,6 @@
 }
 
 /* content box */
-.woostify-metabox-content-box{
-	border-top: 1px solid #ddd;
-	padding-top: 15px;
-	
-	
-}
 
 /*content tab */
 .woostify-metabox-content{
@@ -59,7 +70,15 @@
 /* metabox option */
 .woostify-metabox-option{
 	border-bottom: 1px solid #eee;
-	padding: 20px;
+	padding: 15px;
+
+	body.old-version &{
+		padding: 12px;
+	}
+
+	select{
+		width: 100%;
+	}
 
 	&:after{
 		content: '';
@@ -73,11 +92,5 @@
 }
 
 .woostify-metabox-option-title{
-	float: left;
-	width: 17%;
-}
-
-.woostify-metabox-option-content{
-	float: left;
-	width: 83%;
+	margin-bottom: 4px;
 }
