--- a/assets/css/sass/base/base/theme_unit_test.scss
+++ b/assets/css/sass/base/base/theme_unit_test.scss
@@ -102,7 +102,6 @@
 }
 
 
-
 /* blog password form
 ------------------------------------------------->*/
 .post-password-form {
@@ -214,5 +213,36 @@
         &:hover{
             text-decoration: underline;
         }
+    }
+}
+
+/* Post pagination link
+------------------------------------------------->*/
+.page-links{
+    margin-top: 20px;
+    clear: both;
+    display: block;
+
+    a{
+        &:hover{
+            opacity: 0.6;
+        }
+
+        span{
+            border: 1px solid #888;
+            color: #888;
+            cursor: pointer;
+            @extend .duration;
+        }
+    }
+
+    span{
+        @extend .inline-flex;
+        width: 26px;
+        height: 26px;
+        border-radius: 2px;
+        border: 1px solid #ddd;
+        color: #ddd;
+        cursor: default;
     }
 }
